--- a/THANKS
+++ b/THANKS
@@ -2,7 +2,9 @@ Libtool would not be what it is today without the invaluable help of
 these people:
 
 Everybody who was kind enough to spend time testing libtool, use it in
-their packages and report bugs.
+their packages and report bugs, who are too numerous to mention here.
+Many people who have kindly submitted bug reports and small patches
+are credited for their contributions in the ChangeLogs.
 
 The following people made especially gracious contributions of their
 time and energy in helping to track down bugs, port to new systems,
@@ -10,39 +12,24 @@ and generally assist in the libtool maintainership process:
 
 Akim Demaille <demaille@inf.enst.fr>
 Andrey Slepuhin <pooh@msu.ru>
-Axel Thimm <Axel.Thimm@physik.fu-berlin.de>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
-Charles S. Kerr <cskerr@delenn.jccbi.gov>
-Chris Laas <golem@MIT.EDU>
 Chris P. Ross <cross@eng.us.uu.net>
 Edouard G. Parmelan <Edouard.Parmelan@France.NCR.COM>
 Eric Estievenart <eric@via.ecp.fr>
 Erez Zadok <ezk@shekel.mcl.cs.columbia.edu>
 H.J. Lu <hjl@gnu.org>
 Ian Lance Taylor <ian@cygnus.com>
-Joel Cannon <cannon@alpha.centenary.edu>
-Joel Klecker <espy@debian.org>
 Joel N. Weber II <devnull@gnu.org>
 Joseph Beckenbach III <jrb3@best.com>
-Karl Berry <kb@cs.umb.edu>
 Kenneth Albanowski <kjahds@kjahds.com>
 Kurt D. Zeilenga <Kurt@OpenLDAP.Org>
 Manfred Weichel <Manfred.Weichel@pdb.siemens.de>
 Marc J. Fraioli <fraioli@dg-rtp.dg.com>
-Mark Elbrecht <snowball3@usa.net>
 Mark Kettenis <kettenis@phys.uva.nl>
-Mimi Burbank <mimi@scri.fsu.edu>
-Oliver Guntermann <og@informatik.uni-hannover.de>
-Raffaele Sena <raff@aromatic.com>
-Rainer Orth <ro@TechFak.Uni-Bielefeld.DE>
-Ron O'Hara <rono@sentuny.com.au>
 Sebastian Wilhelmi <wilhelmi@ira.uka.de>
 Stephan Kulow <coolo@kde.org>
 Steven M. Schultz <sms@wlv.iipo.gtegsc.com>
-Thomas Esser <te@informatik.uni-hannover.de>
 Todd Vierling <tv@pobox.com>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
-Vladimir Kushnir <kushn@mail.kar.net>
-Volker Kuhlmann <kuhlmav@elec.canterbury.ac.nz>
