--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-02-17  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in: (freebsd2*, sunos4*, exclude_expsyms): exclude
+	_GLOBAL_OFFSET_TABLE_
+	* ltmain.in: implement exclude_expsyms with egrep
+
 	* libltdl/ltdl.c (lt_dlmalloc, lt_dlfree): SunOS' cc can't cope
 	with argument lists, we __P even in the definition
 
