--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 1999-02-18  Gary V. Vaughan  <gvaughan@oranda.demon.co.uk>
 
+	* ltmain.in (version_type): Implement irix versioning.
+	* ltconfig.in (irix{5,6}*): Use new irix shared object versioning.
+	* TODO: remove irix versioning from TODO list.
+
 	* ltmain.in (impgen.c): Added a new embedded C file that can be
 	used under win32 to extract a def file (symbol export list) from a
 	dll that has none.  Code to use it might need to wait for the ILD
