--- a/THANKS
+++ b/THANKS
@@ -15,6 +15,7 @@ Andrey Slepuhin <pooh@msu.ru>
 Bruno Haible <haible@ilog.fr>
 Carl D. Roth <roth@cse.ucsc.edu>
 Chris P. Ross <cross@eng.us.uu.net>
+DJ Delorie <dj@delorie.com>
 Edouard G. Parmelan <Edouard.Parmelan@France.NCR.COM>
 Eric Estievenart <eric@via.ecp.fr>
 Erez Zadok <ezk@shekel.mcl.cs.columbia.edu>
