--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-02-20  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltmain.in: fixes for export-symbols dry-run
+
 	* ltconfig.in (shlibpath_overrides_runpath): new variable;
 	determines whether LD_LIBRARY_PATH or equivalent can be used to
 	override a hard-coded library search path; default to unknown
@@ -8,6 +10,7 @@
 	* ltmain.in (build_libdirs_flags, build_libdirs, build_rpath): if
 	shlibpath_overrides_runpath is not yes, arrange that wrapper
 	scripts create, on demand, programs that use uninstalled libraries
+
 	* doc/libtool.texi: document it
 	
 	* libtool.m4 (AC_LIBTOOL_DLOPEN): check for dlopen in libc before
