* ltconfig.in (irix5*, irix6*, shlibpath_overides_runpath): yes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-02-22  Alexandre Oliva  <oliva@dcc.unicamp.br>
 
+	* ltconfig.in (irix5*, irix6*, shlibpath_overides_runpath): yes
+
 	* ltmain.in: remove on-demand executable in the proper place, and
 	just warn if it can't be removed; add wrapper code to test whether 
 	the install-executable is newer than the build-executable, to
